# jobberwocky

./: .gitignore  LICENSE  README.md  alembic.ini  architecture_diagram.md  env.example  pyproject.toml  run_tests.py  test_runner.py
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
app/templates/: base.html  index.html  job_detail.html  job_results.html
app/templates/admin/: dashboard.html  edit_job.html  login.html  new_job.html
app/templates/employer/: dashboard.html  edit_job.html  job_payment.html  login.html  new_job.html  register.html
migrations/: env.py
migrations/versions/: 049cab5f98fc_add_employer_accounts_and_payment_.py
requirements/: phase_1.md  phase_2.md  phase_3.md  phase_4.md
scripts/: seed_data.py
tests/: conftest.py  run_tests.py
tests/integration/: test_api.py
tests/unit/: test_apply_buttons.py  test_auth.py  test_database.py  test_job_details.py  test_markdown.py  test_models.py  test_schemas.py
